<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
                name="viewModel"
                type="com.thinsia.ubivault.profile.ProfileViewModel"/>
    </data>

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:text="@string/registration_first_name_hint"/>

            <TextView
                    android:id="@+id/firstNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@{viewModel.profile.firstName}"
                    tools:text="Firstname"/>

            <TextView
                    android:id="@+id/lastNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:text="@string/registration_last_name_hint"/>

            <TextView
                    android:id="@+id/lastNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@{viewModel.profile.lastName}"
                    tools:text="Lastname"/>

            <TextView
                    android:id="@+id/cityLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:text="@string/registration_city_hint"/>

            <TextView
                    android:id="@+id/cityField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@{viewModel.profile.city}"
                    tools:text="Amsterdam"/>

            <TextView
                    android:id="@+id/countryLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:text="@string/registration_country_hint"/>

            <TextView
                    android:id="@+id/countryField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@{viewModel.profile.country}"
                    tools:text="The Netherlands"/>

            <TextView
                    android:id="@+id/emailAddressLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:text="@string/registration_email_hint"/>

            <TextView
                    android:id="@+id/emailAddressField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@{viewModel.profile.email}"
                    tools:text="firstname.lastname@gmail.com"/>

            <TextView
                    android:id="@+id/ethereumAccountLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:text="@string/registration_ethereum_account_hint"/>

            <TextView
                    android:id="@+id/ethereumAccountField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:textSize="18sp"
                    android:text="@{viewModel.profile.ethereumAccount}"
                    tools:text="0x67197e6c81d5c2c95285e33ada844513b1975d1d"/>

            <TextView
                    android:id="@+id/phoneNumberLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:text="@string/registration_phone_number_hint"/>

            <TextView
                    android:id="@+id/phoneNumberField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@{viewModel.profile.phoneNumber}"
                    tools:text="+31 6 11 11 11 11"/>


        </LinearLayout>

    </ScrollView>

</layout>
