<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
                name="viewModel"
                type="com.thinsia.ubivault.income.IncomeViewModel"/>
    </data>

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:text="@string/income_balance_label"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@{viewModel.income.balance}"
                    tools:text="$123.50"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:text="@string/income_basic_income"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@{viewModel.income.basicIncome}"
                    tools:text="$14.00"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:text="@string/income_last_claimed"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@{viewModel.income.lastClaimed}"
                    tools:text="Monday May 13 2019 1:00 PM"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_field_margin"
                    android:text="@string/income_expected_payment_at_time"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@{viewModel.income.expectedPaymentAtTime}"
                    tools:text="Monday May 19 2019 1:00 AM"/>

        </LinearLayout>

    </ScrollView>

</layout>
