<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
                name="viewModel"
                type="com.thinsia.ubivault.registration.RegistrationErrorViewModel"/>
    </data>


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        <ImageView
                android:contentDescription="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_registration_error"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textAlignment="center"
                android:textSize="24sp"
                android:text="@string/registration_error_message"/>

        <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:layout_gravity="end">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:onClick="@{viewModel.tryAgainClickListener}"
                    android:text="@string/registration_try_again"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:onClick="@{viewModel.finishClickListener}"
                    android:text="@string/registration_finish"/>

        </LinearLayout>

    </LinearLayout>

</layout>
